# nostradamus

./: .env  .gitignore  Cargo.toml  docker-compose.yml
backend/: Cargo.toml
backend/src/: handler.rs  main.rs  schema.rs
backend/src/controllers/: mod.rs  player.rs  players.rs
backend/src/db/: mod.rs  player.rs
backend/src/models/: db_models.rs  mod.rs  models.rs
common/: Cargo.toml
common/src/: lib.rs
frontend/: Cargo.toml
sql/: init.sql  model.dbml
