[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mobc = "0.8.1"
mobc-postgres = "0.8.0"
serde = "1.0.159"
serde_json = "1.0.95"
thiserror = "1.0.40"
tokio = "1.27.0"
warp = "0.3.3"
