[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
serde = { version = "=1.0.159", features = ["derive"] }
serde_json = "1.0.95"
wasm-bindgen = "0.2.84"
yew = "0.20.0"
yew-router = "0.17.0"
common = { version ="0.1.0", path = "../common" }
